tests/mut_func_arg_record_coercion.test
type Foo = {a: int};
let f = fun Foo {a} -> a;
####
SyntaxError: Coercions are not allowed in function argument patterns.
type Foo = {a: int};
let f = fun Foo {a} -> a;
            ^~~
